<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".CafeItemBinding">

        <variable
            name="viewModel"
            type="com.thirdwavelist.coficiando.features.home.CafeAdapter.CafeItemViewModel" />

    </data>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        card_view:cardCornerRadius="2dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:image="@{viewModel.thumbnail}"
                app:layout_constraintDimensionRatio="4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/colorPrimary"
                android:contentDescription="@string/alt_item_cafe_thumbnail" />

            <TextView
                android:id="@+id/title"
                style="@android:style/Widget.Material.Light.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@{viewModel.title}"
                android:textSize="24sp"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/thumbnail"
                tools:text="Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                card_view:layout_constraintStart_toStartOf="@+id/guideline"
                card_view:layout_constraintTop_toBottomOf="@+id/title">

                <ImageView
                    android:id="@+id/has_espresso"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_espresso"
                    android:gravity="start"
                    app:isVisible="@{viewModel.hasEspresso}"
                    android:contentDescription="@string/alt_item_cafe_espresso_icon" />

                <ImageView
                    android:id="@+id/has_pour_over"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/ic_pourover"
                    android:gravity="start"
                    app:isVisible="@{viewModel.hasPourOver}"
                    android:contentDescription="@string/alt_item_cafe_pour_over_icon" />

                <ImageView
                    android:id="@+id/has_cold_brew"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/ic_coldbrew"
                    android:gravity="start"
                    app:isVisible="@{viewModel.hasColdBrew}"
                    android:contentDescription="@string/alt_item_cafe_cold_brew_icon" />

                <ImageView
                    android:id="@+id/has_immersive"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/ic_immersive"
                    android:gravity="start"
                    app:isVisible="@{viewModel.hasImmersive}"
                    android:contentDescription="@string/alt_item_cafe_immersive_icon" />

                <ImageView
                    android:id="@+id/has_aeropress"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/ic_aeropress"
                    android:gravity="start"
                    app:isVisible="@{viewModel.hasAeropress}"
                    android:contentDescription="@string/alt_item_cafe_aeropress_icon" />

                <ImageView
                    android:id="@+id/has_syphon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/ic_syphon"
                    android:gravity="start"
                    app:isVisible="@{viewModel.hasSyphon}"
                    android:contentDescription="@string/alt_item_cafe_syphon_icon" />

            </LinearLayout>

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                card_view:layout_constraintGuide_begin="104dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</layout>